--- a/css/src.css
+++ b/css/src.css
@@ -4,7 +4,11 @@ body{
 }
 
 div{
-    height: 200px;
-    width: 200px;
+    height: 40px;
+    width: 100%;
     background-color:aqua;
+    color: crimson;
+}
+h3{
+  background-color: brown;
 }
